# interview-tool

./: .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt
apps/dictara/: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SETUP_TRANSCRIPTION.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
apps/dictara/.claude/commands/: git.md  prime-icons.md  regression-test-plan.md  release.md  review-current.md  security-report.md
apps/dictara/.claude/plans/: add-microphone-permission-step.md  add-parakeet-v3-model.md  add-transcription-timeout.md  keyboard-shortcuts-configuration.md  keyboard-shortcuts-full-implementation.drawio  keyboard-shortcuts-full-implementation.md  local-llm-post-processing-research.md  local-whisper-transcription.md  migrate-api-keys-to-secret-string.md  streaming-audio-transcription-research.md  two-layer-hooks-architecture.md
apps/dictara/.claude/refactoring/: error-handling.md
apps/dictara/.claude/test-plans/: regression-v0.1.23.md
apps/dictara/.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
apps/dictara/crates/keyboard/: Cargo.toml
apps/dictara/crates/keyboard/src/: event.rs  key.rs  lib.rs  macos.rs
apps/dictara/landing/: index.html  package-lock.json  package.json  vite.config.ts
apps/dictara/notes/: 10-minutes-audio-estimate.md  auto-paste.md  edge-cases-to-improve.md  hotkey-config-plan.md  recording-popup-focus-issue.md
apps/dictara/scripts/: with-env.sh
apps/dictara/security/: report.md
apps/dictara/src/: bindings.ts  index.css  main.tsx  routeTree.gen.ts
apps/dictara/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.prod.conf.json
apps/dictara/src-tauri/capabilities/: default.json
apps/dictara/src-tauri/icons/: icon.icns
apps/dictara/src-tauri/src/: autolaunch.rs  config.rs  error.rs  globe_key.rs  keyboard_listener.rs  keychain.rs  lib.rs  live_assist_bridge.rs  log.rs  main.rs  setup.rs  specta.rs  telemetry.rs  text_paster.rs  updater.rs
apps/dictara/src-tauri/src/clients/: api_transcriber.rs  azure_client.rs  client.rs  config.rs  error.rs  local_transcriber.rs  mod.rs  openai_client.rs  service.rs  transcriber.rs
apps/dictara/src-tauri/src/commands/: app.rs  mod.rs  recording.rs  registry.rs
apps/dictara/src-tauri/src/commands/onboarding/: accessibility.rs  flow.rs  microphone.rs  mod.rs
apps/dictara/src-tauri/src/commands/preferences/: general.rs  mod.rs  shortcuts.rs  system.rs
apps/dictara/src-tauri/src/commands/preferences/api_keys/: common.rs  mod.rs  provider_azure_openai.rs  provider_local.rs  provider_openai.rs
apps/dictara/src-tauri/src/models/: catalog.rs  events.rs  loader.rs  local_client.rs  manager.rs  mod.rs  status.rs
apps/dictara/src-tauri/src/recording/: audio_recorder.rs  commands.rs  controller.rs  events.rs  mod.rs  realtime_recorder.rs  state_manager.rs  vad.rs
apps/dictara/src-tauri/src/shortcuts/: events.rs
apps/dictara/src-tauri/src/ui/: menu.rs  mod.rs  tray.rs  window.rs
apps/dictara/src-tauri/tests/: generate_bindings.rs
apps/docs-server/: .gitignore  README.md  package.json  vite.config.ts
apps/docs-server/public/: index.html  viewer.css
apps/docs-server/src/: server.ts
apps/docs-server/viewer/: main.tsx
apps/extension/: README.md  package.json  tsconfig.json  wxt.config.ts
apps/extension/entrypoints/: background.ts  content.tsx
apps/extension/src/: chatgptAdapter.ts  content.css  liveAssist.ts  liveDocPublisher.ts  nativeBridge.ts  promptSettings.ts  speechProviders.ts
apps/native-helper/: .env.example  README.md  package.json  tsconfig.json
apps/native-helper/src/: server.ts
docs/: CODING_INTERVIEW_MODE.md
(+75 files in other folders)
