[package]
name = "dictara"
version = "0.2.4"
description = "Dictara - Speach to text app"
authors = ["Dictara Contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dictara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
sentry = "0.46.1"
uuid = { version = "1.11", features = ["v4"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dictara-keyboard = { path = "../crates/keyboard" }
macos-accessibility-client = "0.0.1"
cpal = "0.15"
hound = "3.5"
rubato = "0.16"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
arboard = "3.3"
enigo = "0.6"
# Silero VAD - using official implementation directly (no wrapper crate)
# Based on: https://github.com/snakers4/silero-vad/tree/master/examples/rust-example
# Using rc.10 for Intel Mac binary support (rc.11 dropped Intel binaries)
# Pinned to EXACTLY rc.10 to match parakeet-rs 0.2.7 compatibility
# NOTE: Use = for exact version to prevent Dependabot from upgrading
ort = { version = "=2.0.0-rc.10", features = ["copy-dylibs", "download-binaries"] }
ndarray = "0.16"
image = "0.25.9"
derive_more = { version = "2.1.1", features = ["from", "display"] }
keyring = { version = "3", features = ["apple-native"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
thiserror = "2.0.17"
strum = { version = "0.27.2", features = ["derive"] }
# Local transcription - whisper.cpp bindings with Metal acceleration
whisper-rs = { version = "0.13", features = ["metal"] }
# Parakeet TDT multilingual transcription via ONNX Runtime
# Pinned to EXACTLY 0.2.7 (last version before ort rc.11 upgrade) for Intel Mac binary support
# NOTE: Use = for exact version to prevent Dependabot from upgrading
parakeet-rs = { version = "=0.2.7", default-features = false, features = ["coreml", "ort-defaults"] }
# For async model downloads with progress
futures-util = "0.3"
# For cancellation tokens in downloads
tokio-util = "0.7"
# For SHA-256 checksum verification of downloaded models
sha2 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = "0.3.1"  # For direct CGEvent posting
objc2-core-foundation = "0.3.1"
objc2-app-kit = { version = "0.3.1", features = ["NSWindow", "NSResponder", "NSRunningApplication", "NSWorkspace"] }
objc2-av-foundation = { version = "0.3.1", features = ["AVCaptureDevice", "AVMediaFormat"] }
objc2 = "0.6"
block2 = "0.6"  # For Objective-C blocks in callbacks

